# HyperLocalWindGuru

./: .gitignore  README.md  pyproject.toml
data/: data_stations_considerations.txt  station_15219_littlehampton_beach-watersports_history.csv  station_15219_littlehampton_beach-watersports_history.parquet  station_2353_greatstone_varne-watersports-club_history.csv  station_2353_greatstone_varne-watersports-club_history.parquet  station_53_camber-sands_red-house_history.csv  station_53_camber-sands_red-house_history.parquet  station_53_camber-sands_red-house_merged.parquet.enc  station_571_southend-on-sea_teyc-jetty_history.csv  station_571_southend-on-sea_teyc-jetty_history.parquet
hyper_local_wind/: __init__.py  crypto.py  data.py  evaluate.py  inference.py  model.py  train.py
hyper_local_wind/.ipynb_checkpoints/: config-checkpoint.py  data-checkpoint.py  evaluate-checkpoint.py
notebooks/: camber_arome_correction_multimodel.ipynb
scripts/: archive_crypto.py  fetch_arome.py  fetch_station_history.py
